--- a/Examples/Example-iOS-ObjC/Base.lproj/Main.storyboard
+++ b/Examples/Example-iOS-ObjC/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fhp-D4-2oC">
-                                <rect key="frame" x="10" y="30" width="355" height="507"/>
+                                <rect key="frame" x="10" y="10" width="355" height="527"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -27,18 +25,28 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tQm-Xk-agy">
                                 <rect key="frame" x="10" y="547" width="355" height="110"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wfh-no-STH">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="50"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wfh-no-STH">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
+                                        <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <state key="normal" title="out of memory report">
+                                            <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="outOfMemoryReportAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j1d-Yg-4mQ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5SP-Go-i82">
+                                        <rect key="frame" x="0.0" y="40" width="355" height="30"/>
                                         <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="live report">
                                             <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
                                         <connections>
-                                            <action selector="liveReportAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="r8l-mx-oQk"/>
+                                            <action selector="liveReportAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bqu-q0-7Zw"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4g4-3C-4oZ">
-                                        <rect key="frame" x="0.0" y="60" width="355" height="50"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4g4-3C-4oZ">
+                                        <rect key="frame" x="0.0" y="80" width="355" height="30"/>
                                         <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="crash">
                                             <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -53,6 +61,7 @@
                                 </constraints>
                             </stackView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Wq8-QM-bIQ"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Wq8-QM-bIQ" firstAttribute="bottom" secondItem="tQm-Xk-agy" secondAttribute="bottom" constant="10" id="6Uy-hB-fYL"/>
@@ -63,7 +72,6 @@
                             <constraint firstItem="tQm-Xk-agy" firstAttribute="leading" secondItem="Wq8-QM-bIQ" secondAttribute="leading" constant="10" id="eY6-cL-M6I"/>
                             <constraint firstItem="Fhp-D4-2oC" firstAttribute="top" secondItem="Wq8-QM-bIQ" secondAttribute="top" constant="10" id="vbK-EV-v8z"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Wq8-QM-bIQ"/>
                     </view>
                     <connections>
                         <outlet property="textView" destination="Fhp-D4-2oC" id="NVZ-d1-QD6"/>
@@ -71,6 +79,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="49" y="53"/>
         </scene>
     </scenes>
 </document>
