--- a/Examples/Example-iOS-ObjC/Base.lproj/Main.storyboard
+++ b/Examples/Example-iOS-ObjC/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,70 +17,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fhp-D4-2oC">
-                                <rect key="frame" x="10" y="10" width="355" height="527"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tsU-4H-9sS">
+                                <rect key="frame" x="16" y="61" width="343" height="586"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CaseCell" id="oJd-wS-C1F" customClass="SimulatorCaseCell" customModule="Example_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="343" height="43"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oJd-wS-C1F" id="aOf-Xc-7SN">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUO-JB-lcm">
+                                                    <rect key="frame" x="16" y="11" width="311" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="lUO-JB-lcm" firstAttribute="trailing" secondItem="aOf-Xc-7SN" secondAttribute="trailingMargin" id="RT2-bF-py0"/>
+                                                <constraint firstItem="lUO-JB-lcm" firstAttribute="top" secondItem="aOf-Xc-7SN" secondAttribute="topMargin" id="Tlk-OM-pG4"/>
+                                                <constraint firstItem="lUO-JB-lcm" firstAttribute="leading" secondItem="aOf-Xc-7SN" secondAttribute="leadingMargin" id="oF5-4i-Rle"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="lUO-JB-lcm" secondAttribute="bottom" id="wuE-HR-tox"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="lUO-JB-lcm" id="7e0-yk-UcP"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Hallo Backtrace!" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9yx-kb-zig">
+                                <rect key="frame" x="16" y="20" width="343" height="33"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="UQA-I1-GHs"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="33" id="nuW-8Z-I7W"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tQm-Xk-agy">
-                                <rect key="frame" x="10" y="547" width="355" height="110"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wfh-no-STH">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
-                                        <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <state key="normal" title="out of memory report">
-                                            <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="outOfMemoryReportAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j1d-Yg-4mQ"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5SP-Go-i82">
-                                        <rect key="frame" x="0.0" y="40" width="355" height="30"/>
-                                        <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <state key="normal" title="live report">
-                                            <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="liveReportAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bqu-q0-7Zw"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4g4-3C-4oZ">
-                                        <rect key="frame" x="0.0" y="80" width="355" height="30"/>
-                                        <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <state key="normal" title="crash">
-                                            <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="crashAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WF8-kd-r4x"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="110" id="lgg-Nc-FJA"/>
-                                </constraints>
-                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Wq8-QM-bIQ"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Wq8-QM-bIQ" firstAttribute="bottom" secondItem="tQm-Xk-agy" secondAttribute="bottom" constant="10" id="6Uy-hB-fYL"/>
-                            <constraint firstItem="tQm-Xk-agy" firstAttribute="top" secondItem="Fhp-D4-2oC" secondAttribute="bottom" constant="10" id="Eoh-yf-HIu"/>
-                            <constraint firstItem="Wq8-QM-bIQ" firstAttribute="trailing" secondItem="tQm-Xk-agy" secondAttribute="trailing" constant="10" id="Frh-cP-Ea0"/>
-                            <constraint firstItem="Fhp-D4-2oC" firstAttribute="leading" secondItem="Wq8-QM-bIQ" secondAttribute="leading" constant="10" id="GPC-aq-qne"/>
-                            <constraint firstItem="Wq8-QM-bIQ" firstAttribute="trailing" secondItem="Fhp-D4-2oC" secondAttribute="trailing" constant="10" id="Ywq-Dc-ZIv"/>
-                            <constraint firstItem="tQm-Xk-agy" firstAttribute="leading" secondItem="Wq8-QM-bIQ" secondAttribute="leading" constant="10" id="eY6-cL-M6I"/>
-                            <constraint firstItem="Fhp-D4-2oC" firstAttribute="top" secondItem="Wq8-QM-bIQ" secondAttribute="top" constant="10" id="vbK-EV-v8z"/>
+                            <constraint firstItem="Wq8-QM-bIQ" firstAttribute="bottom" secondItem="tsU-4H-9sS" secondAttribute="bottom" constant="20" id="1a1-pK-Y7X"/>
+                            <constraint firstItem="Wq8-QM-bIQ" firstAttribute="trailing" secondItem="tsU-4H-9sS" secondAttribute="trailing" constant="16" id="8E6-W3-fZN"/>
+                            <constraint firstItem="9yx-kb-zig" firstAttribute="leading" secondItem="Wq8-QM-bIQ" secondAttribute="leading" constant="16" id="UTw-ZF-sHT"/>
+                            <constraint firstItem="tsU-4H-9sS" firstAttribute="leading" secondItem="Wq8-QM-bIQ" secondAttribute="leading" constant="16" id="cue-Mr-w9R"/>
+                            <constraint firstItem="tsU-4H-9sS" firstAttribute="top" secondItem="9yx-kb-zig" secondAttribute="bottom" constant="8" symbolic="YES" id="j5G-ho-k2L"/>
+                            <constraint firstItem="9yx-kb-zig" firstAttribute="top" secondItem="Wq8-QM-bIQ" secondAttribute="top" constant="20" id="qMy-vp-eF4"/>
+                            <constraint firstItem="Wq8-QM-bIQ" firstAttribute="trailing" secondItem="9yx-kb-zig" secondAttribute="trailing" constant="16" id="wvR-vy-eUw"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="textView" destination="Fhp-D4-2oC" id="NVZ-d1-QD6"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="49" y="53"/>
+            <point key="canvasLocation" x="48.799999999999997" y="52.623688155922046"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
