--- a/Examples/Example-iOS/Base.lproj/Main.storyboard
+++ b/Examples/Example-iOS/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,65 +17,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uk6-aK-qdW">
-                                <rect key="frame" x="10" y="10" width="355" height="527"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Hallo Backtrace!" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uk6-aK-qdW">
+                                <rect key="frame" x="10" y="10" width="355" height="33"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="HD0-qq-4KM"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lli-SU-JcF">
-                                <rect key="frame" x="10" y="547" width="355" height="110"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eDc-rC-hgp">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
-                                        <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <state key="normal" title="out of memory report">
-                                            <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </state>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8lh-6a-7qJ">
+                                <rect key="frame" x="16" y="51" width="343" height="596"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CaseCell" id="hgy-mD-Ybb" customClass="SimulatorCaseCell" customModule="Example_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="343" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hgy-mD-Ybb" id="X2f-vj-z56">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCd-s3-yeL">
+                                                    <rect key="frame" x="16" y="11" width="311" height="21.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="aCd-s3-yeL" firstAttribute="top" secondItem="X2f-vj-z56" secondAttribute="topMargin" id="8U5-KX-oRL"/>
+                                                <constraint firstItem="aCd-s3-yeL" firstAttribute="leading" secondItem="X2f-vj-z56" secondAttribute="leadingMargin" id="FIX-Qa-Iwc"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="aCd-s3-yeL" secondAttribute="bottom" id="cMC-MX-fdi"/>
+                                                <constraint firstItem="aCd-s3-yeL" firstAttribute="trailing" secondItem="X2f-vj-z56" secondAttribute="trailingMargin" id="fZn-5d-hch"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
                                         <connections>
-                                            <action selector="outOfMemoryReportAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J8h-B9-TSs"/>
+                                            <outlet property="titleLabel" destination="aCd-s3-yeL" id="8th-G7-anQ"/>
                                         </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b24-yr-2O3">
-                                        <rect key="frame" x="0.0" y="40" width="355" height="30"/>
-                                        <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <state key="normal" title="live report">
-                                            <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="liveReportAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XTN-dL-QKP"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49v-So-aeo">
-                                        <rect key="frame" x="0.0" y="80" width="355" height="30"/>
-                                        <color key="backgroundColor" red="0.86495327950000001" green="0.49887192250000001" blue="0.45880818369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <state key="normal" title="crash">
-                                            <color key="titleColor" red="0.23527315260000001" green="0.23534822459999999" blue="0.2313722074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="crashAppAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tI2-51-j0T"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="110" id="mou-Ln-Lbp"/>
-                                </constraints>
-                            </stackView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="kVR-5I-zFo"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="c96-Vo-tyE"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Lli-SU-JcF" firstAttribute="top" secondItem="uk6-aK-qdW" secondAttribute="bottom" constant="10" id="9Dp-ux-S5I"/>
                             <constraint firstItem="uk6-aK-qdW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="A9E-bW-4qv"/>
                             <constraint firstItem="uk6-aK-qdW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Icq-rr-6YN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8lh-6a-7qJ" secondAttribute="trailing" constant="16" id="KYP-5j-Fff"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uk6-aK-qdW" secondAttribute="trailing" constant="10" id="Lrp-MM-oCV"/>
+                            <constraint firstItem="uk6-aK-qdW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Lx8-9S-MIa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8lh-6a-7qJ" secondAttribute="bottom" constant="20" id="OTV-zu-YQW"/>
+                            <constraint firstItem="8lh-6a-7qJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="UYZ-5a-oq8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uk6-aK-qdW" secondAttribute="trailing" constant="10" id="b5u-LN-1ZR"/>
-                            <constraint firstItem="Lli-SU-JcF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="lyT-up-f6d"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lli-SU-JcF" secondAttribute="trailing" constant="10" id="p4G-ce-ctp"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Lli-SU-JcF" secondAttribute="bottom" constant="10" id="rFJ-aa-p3D"/>
+                            <constraint firstItem="uk6-aK-qdW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="wMz-hO-jnf"/>
+                            <constraint firstItem="8lh-6a-7qJ" firstAttribute="top" secondItem="uk6-aK-qdW" secondAttribute="bottom" constant="8" symbolic="YES" id="yV3-e3-6Oz"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="textView" destination="uk6-aK-qdW" id="e7G-nI-5Kc"/>
+                        <outlet property="tableView" destination="8lh-6a-7qJ" id="5wp-Hr-6St"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -82,4 +86,9 @@
             <point key="canvasLocation" x="56.799999999999997" y="26.53673163418291"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
