Final polishes - updated CLD algorithm, updated all examples to utilise CLD functionality

--- a/Examples/Example-macOS-ObjC/Base.lproj/Main.storyboard
+++ b/Examples/Example-macOS-ObjC/Base.lproj/Main.storyboard
@@ -715,7 +715,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="wS4-BS-4BZ"/>
                                 </constraints>
-                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vpD-Xg-4cH">
+                                <buttonCell key="cell" type="push" title="Crash Me" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vpD-Xg-4cH">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
